[tool.poetry]
name = "indexer"
version = "0.1.0"
description = "Indexer module for ttds project"
authors = ["Patrick Tourniaire <patrick@tourniaire.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kafka-python="2.0.2"
nltk="3.8.1"
numpy="1.24.2"
pandas="1.5.3"
psycopg2-binary="2.9.5"
regex="2022.10.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
